[package]
name = "VexScout"
version = "0.1.0"
authors = ["Sridaran Thoniyil <sri7thon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.44" }
serde = { version = "1.0.103", features = ["derive"] }